--- a/Assets/GomokuGame/Script/Runtime/AillieoUtils.Gomoku.asmdef
+++ b/Assets/GomokuGame/Script/Runtime/AillieoUtils.Gomoku.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "AillieoUtils.GoBang",
+    "name": "AillieoUtils.Gomoku",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
