--- a/Assets/Sample/Scripts/Sample.asmdef
+++ b/Assets/Sample/Scripts/Sample.asmdef
@@ -2,7 +2,7 @@
     "name": "Sample",
     "references": [
         "AillieoUtils.MCTS",
-        "AillieoUtils.GoBang"
+        "AillieoUtils.Gomoku"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
